passing props from meallist to meal

--- a/src/components/Meals/Meal.module.css
+++ b/src/components/Meals/Meal.module.css
@@ -1,8 +1,9 @@
 .meal{
-    padding: 1rem;
+    padding: 0.5rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
     background-color: rgb(228, 208, 10);
+    margin-bottom: 10px;
     
 }
 .meal h1{
