--- a/src/components/Meals/Meal.module.css
+++ b/src/components/Meals/Meal.module.css
@@ -1,9 +1,13 @@
 .meal{
-    padding: 0.5rem;
+    padding: 0.8rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
     background-color: rgb(228, 208, 10);
     margin-bottom: 10px;
+    height: 8rem;
+    display: flex;
+    justify-content: space-between;
+    line-height: 15px;
     
 }
 .meal h1{
@@ -17,9 +21,8 @@
     font-weight: lighter;
 }
 
-.price{
-    display: flex;
-    justify-content: flex-end;
-    
-
+.mealform {
+    margin-top: 30px;
 }
+
+
