--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -2,6 +2,8 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    z-index: 2;
+   
   }
   
   .total {
@@ -12,6 +14,7 @@
     font-size: 1.5rem;
     margin: 1rem 0;
   }
+  
   
   .actions {
     text-align: right;
