--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -16,6 +16,11 @@
     margin-left: 2rem;
 
 }
+.barIcon{
+ margin-left: 10px;
+ display: none;
+ font-size: 35px;
+}
 
 .button {
     cursor: pointer;
@@ -39,7 +44,7 @@
   .text{
     margin-left: 1rem;
   }
-  
+ 
   
   
   .badge {
@@ -54,3 +59,14 @@
   .button:active .badge {
     background-color: #92320c;
   }
+
+  @media screen and (max-width: 700px) {
+    .barIcon{
+   
+      display: block;
+     }
+     .button { 
+      padding: 0.25rem 1.7rem;
+      
+    }
+    }
