--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -9,5 +9,21 @@
     transition: all 0.5s ease;
     
 }
+.sidebar h1{
+    color:  #b94517;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.icon{
+    color: crimson;
+    width: 20px;
+    height: 50px;
+    position: absolute;
+    top: 2%;
+    right: 5%;
+    cursor: pointer;
+
+}
 
 
