Using appContext to map over buttons and use filterItems function to filter meals

--- a/src/components/Categories.module.css
+++ b/src/components/Categories.module.css
@@ -1,5 +1,5 @@
 .button {
-    background-color: #f0c349; 
+    background-color: rgb(53, 53, 124); 
     border: none;
     color: white;
     padding: 15px 32px;
