--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -60,6 +60,21 @@
     background-color: #92320c;
   }
 
+  .link{
+    text-transform: uppercase;
+    color: black ;
+    background-color: rgb(228, 208, 10);
+    text-decoration: none;
+    padding: 8px 10px ;
+    border-radius: 7px;
+
+  }
+
+ 
+
+
+
+
   @media screen and (max-width: 700px) {
     .barIcon{
    
