--- a/src/components/Meals/MealList.module.css
+++ b/src/components/Meals/MealList.module.css
@@ -7,3 +7,10 @@
     padding: 3rem;
     margin: auto;
 }
+
+@media screen and (max-width: 700px) {
+    .meals{
+        max-width: 22rem;
+  
+    }
+  }
