--- a/src/components/Categories.module.css
+++ b/src/components/Categories.module.css
@@ -11,8 +11,16 @@
     border-radius: 5px;
   }
 
+ 
+
 .btnDiv{
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 700px) {
+  .button { 
+    padding: 8px 15px;
+  }
 }
