--- a/src/components/AboutPage.css
+++ b/src/components/AboutPage.css
@@ -1,34 +1,63 @@
-.aboutDiv{
-    height: 50rem;
-    max-width: 1600px;
-    width: 100%;
-    background-color: #2F4050;
-    border-radius: 15px;
-    text-align: center;
+.aboutDiv {
+  height: 38rem;
+  max-width: 1200px;
+  width: 100%;
+  background-color: #2f4050;
+  border-radius: 15px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.icon {
+  color: rgb(233, 233, 93);
+  width: 50px;
+  height: 60px;
+}
+
+#firstIcon {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+
+#secondIcon {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+}
+
+.content {
+  width: 600px;
+  height: 500px;
+  position: absolute;
+  top: 20%;
+  left: 10%;
+}
+
+.content h1{
+    font-weight: bold;
+
+}
+
+.content h1 span{
+   color: rgb(233, 233, 93);
+}
+.content p{
+    color: #fff;
+
+}
+.line {
+    border-left: 6px solid rgb(233, 233, 93);
+    height: 350px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    
-}
+    top: 18%;
+    margin-left: -3px;
+    border-radius: 3px;
+    left: 8%;
 
-.icon{
-    color: rgb(233, 233, 93);
-    width: 50px;
-    height: 60px;
-    
-}
-
-#firstIcon{
-    position: absolute;
-    top: 5%;
-    left: 5%;
-}
-
-#secondIcon{
-    position: absolute;
-    bottom: 5%;
-    right: 5%;
-}
-
+  }
+  
