--- a/src/components/OrderPage.css
+++ b/src/components/OrderPage.css
@@ -1,5 +1,14 @@
-.header{
-    color: aliceblue;
+.div{
+    height: 25rem;
+    max-width: 1600px;
+    width: 100%;
+    background-color: aliceblue;
+    border-radius: 15px;
     text-align: center;
-    font-size: large;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    
 }
