--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -2,7 +2,7 @@
     height: 25rem;
     max-width: 1600px;
     width: 100%;
-    background-color: aliceblue;
+    background-color: rgb(120, 166, 206);
     border-radius: 15px;
     text-align: center;
     position: absolute;
@@ -11,4 +11,12 @@
     margin-right: -50%;
     transform: translate(-50%, -50%);
     
+}
+
+.background{
+    width: 100%;
+    height: 100vh;
+    background-image: url('../images/contact.jpg');
+    background-position: center;
+    background-size: cover;
 }
