--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -1,22 +1,39 @@
-.contactDiv{
-    height: 25rem;
-    max-width: 1600px;
-    width: 100%;
-    background-color: rgb(120, 166, 206);
-    border-radius: 15px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    
+.contactDiv {
+  height: 28rem;
+  max-width: 1000px;
+  width: 100%;
+  background-color: rgb(120, 166, 206);
+  border-radius: 15px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.background{
-    width: 100%;
-    height: 100vh;
-    background-image: url('../images/contact.jpg');
-    background-position: center;
-    background-size: cover;
+.background {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../images/contact.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.inputs {
+  text-align: center;
+  border: none;
+  background: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  outline: none;
+}
+
+.inputs input {
+  margin-bottom: 15px;
+
+  width: 25rem;
 }
