--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -1,8 +1,8 @@
-.contactDiv {
+.wrapper {
   height: 28rem;
   max-width: 1000px;
   width: 100%;
-  background-color: rgb(120, 166, 206);
+  background-color: #2f4050;
   border-radius: 15px;
   text-align: center;
   position: absolute;
@@ -10,12 +10,24 @@
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+ 
+}
+
+.wrapper h1 span{
+  color:  rgb(250, 228, 29);
+}
+.contactDiv{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: 2rem;
 }
 
+
 .background {
+  opacity: 0.9;
   width: 100%;
   height: 100vh;
   background-image: url("../images/contact.jpg");
@@ -27,13 +39,23 @@
   border: none;
   background: none;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   outline: none;
 }
 
-.inputs input {
+.inputs  input {
   margin-bottom: 15px;
-
+  border-radius: 6px;
+  padding: 10px;
   width: 25rem;
+}
+
+.btn{
+  text-transform: uppercase;
+  color: black ;
+  background-color: rgb(228, 208, 10);
+  text-decoration: none;
+  padding: 8px 10px ;
+  border-radius: 7px;
+
 }
